Add include directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(glfw3 3.3 REQUIRED)
 aux_source_directory(src SRC_FILE)
 aux_source_directory(imgui SRC_FILE)
 file(GLOB HDR_FILE "imgui/*.h*")
-include_directories(src imgui)
+include_directories(src imgui include)
 add_definitions(-DIMGUI_USER_CONFIG=<imconfig-glfw.h>)
 add_library(${PROJECT_NAME} ${SRC_FILE} ${HDR_FILE})
 target_link_libraries(${PROJECT_NAME} debug glfw3d optimized glfw3)
