--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ if(NOT EMSCRIPTEN)
     find_package(glfw3 3.2 REQUIRED)
     find_package(OpenGL REQUIRED)
     find_package(Freetype REQUIRED)
+    add_definitions(-DIMGUI_ENABLE_FREETYPE)
 endif(NOT EMSCRIPTEN)
 aux_source_directory(src SRC_FILE)
 aux_source_directory(imgui SRC_FILE)
